--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: DougieWougie Theme
-Author: Gemini
+Author: Dougie Richardson
 Author URI: https://dougiewougie.com
 Description: A modern WordPress theme for my personal blog.
-Version: 1.1
+Version: 1.2
 */
 
 /* Basic CSS Reset */
